asm/tests/ui/syntax.wa
# Unknown section name
section .statics

section .code

# No immediate argument
.const a
# No arguments
.const

# No arguments
.include

# No arguments
.b1
.b2
.b4
.b8
.zero
.uninit
.bytes

# Multiple directives on the same line
.b1 32 .b2 391010

# Multiple labels on one line
label1: label2: sub $1, $2

# Invalid character in label
label-3:
3:

# keyword after identifier
foo section

loop:

# No comma between arguments
add $0 $1
div $0, $1 $2 ; comment at the end of a line # woo

# Trailing comma
add $0, $1,

# Leading comma
add, $63, $62

; a comment

call $0
nop

# register + offset syntax (valid)
load8 $1, -8($2)
load8 $1, 256($2)
# mismatches parenthesis
load8 $1, -12 $2)
load8 $1, -16($2
# extra parenthesis
load8 $1, -24(($2))
# offset inside, register outside
load8 $1, $2(-8)
# both inside
load8 $1, ($2-8)
# both inside, no parens
load8 $1, $2-8

jmp loop
